[stream] HighCalNames added.
A very basic stream.

--- a/stream/pom.xml
+++ b/stream/pom.xml
@@ -1,18 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!-- parent가 필요시 적절히 수정한다 -->
-    <parent>
-        <groupId>io.github.darkchoco.java</groupId>
-        <artifactId>classical-computer-science-problems</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath></relativePath>
-    </parent>
-    <!-- 아래 4줄 수정 -->
-    <artifactId>template</artifactId>
+    <groupId>io.github.darkchoco.java</groupId>
+    <artifactId>stream</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>template</name>
-    <description>Basic template</description>
+    <name>stream</name>
+    <description>Stream</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -50,13 +43,19 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.10.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
