--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.darkchoco.java-spring</groupId>
-    <artifactId>java-programming</artifactId>
+    <groupId>io.github.darkchoco</groupId>
+    <artifactId>java-project</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>java-programming</name>
-    <description>Projects related to Java Programming</description>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>java-project</name>
+    <description>Java Projects</description>
 
     <modules>
+<!--
         <module>classical-computer-science-problems/small-problems</module>
         <module>ex</module>
-        <module>logging</module>
+-->
+        <module>template</module>
     </modules>
 </project>
